--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,26 @@
-﻿<Window x:Class="Prog122_S24_L2_Notes.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prog122_S24_L2_Notes"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Canvis>
+﻿<Window
+    x:Class="Prog122_S24_L2_Notes.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Prog122_S24_L2_Notes"
+    mc:Ignorable="d"
+    Title="MainWindow"
+    Height="450"
+    Width="800">
+    <Canvas>
 
+        <TextBox
+            x:Name="NameTextBox"
+            Canvas.Left="100"
+            Canvas.Top="50"
+            Width="200" />
+        <TextBox
+            x:Name="AnotherTextBox"
+            Canvas.Left="100"
+            Canvas.Top="100"
+            Width="200" />
+
+    </Canvas>
 </Window>
