--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,21 +6,72 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:Prog122_S24_L2_Notes"
     mc:Ignorable="d"
-    Title="MainWindow"
+    Title="Yes"
     Height="450"
-    Width="800">
-    <Canvas>
+    Width="792">
+    <!--Layout Tag-->
+    <Canvas
+        Margin="0,10,0,0">
+
+        <Button
+            x:Name="btnPopUpMessage"
+            Content="Pop Up Message"
+            Canvas.Left="295"
+            Canvas.Top="119"
+            Height="34"
+            Width="156"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="btnPopUpMessage_Click" />
+
+
+        <Label
+            Content="First Name: "
+            Canvas.Left="281"
+            Canvas.Top="70" />
 
         <TextBox
-            x:Name="NameTextBox"
-            Canvas.Left="100"
-            Canvas.Top="50"
-            Width="200" />
+            x:Name="txtFirstName"
+            Canvas.Left="359"
+            TextWrapping="Wrap"
+            Text="Will"
+            Canvas.Top="74"
+            Width="120" />
         <TextBox
-            x:Name="AnotherTextBox"
-            Canvas.Left="100"
-            Canvas.Top="100"
-            Width="200" />
+            x:Name="txtNum1"
+            Canvas.Left="295"
+            TextWrapping="Wrap"
+            Text="TextBox"
+            Canvas.Top="195"
+            Width="59"
+            Height="31" />
+        <TextBox
+            x:Name="txtNum2"
+            Canvas.Left="396"
+            TextWrapping="Wrap"
+            Text="TextBox"
+            Canvas.Top="195"
+            Width="59"
+            Height="31"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center" />
+        <Button
+            x:Name="btnAddNumbers"
+            Content="Sum Numbers"
+            Canvas.Left="295"
+            Canvas.Top="246"
+            Height="34"
+            Width="156"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Click="btnAddNumbers_Click" />
+
+        <!--Button
+        TextBox
+        Label
+        MessageBox-->
 
     </Canvas>
+
 </Window>
+    
